# playOpenCV

./: CMakeLists.txt  README.md  canny_cut.cpp  canny_detector.cpp  drawing.cpp  histogram_calculation.cpp  histogram_equalization.cpp  histograms.cpp  histograms_matching.cpp  mat_add.cpp
ios/MIYProcessingVideo/: ViewController.h  ViewController.m
ios/MIYProcessingVideo.xcodeproj/: project.pbxproj
ios/MIYProcessingVideo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/MIYProcessingVideo.xcodeproj/project.xcworkspace/xcuserdata/qingping.zhang.xcuserdatad/: UserInterfaceState.xcuserstate
ios/MIYProcessingVideo.xcodeproj/xcuserdata/qingping.zhang.xcuserdatad/xcschemes/: Chapter12_ProcessingVideo.xcscheme
ios/MIYProcessingVideo/en.lproj/: MainStoryboard_iPad.storyboard  MainStoryboard_iPhone.storyboard
